# multiguard

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: cd.yml  ci.yml
configs/: base.yaml
configs/data/: augmentation.yaml  preprocessing.yaml
configs/experiment/: ablation_fusion.yaml  baseline.yaml
configs/inference/: quantization.yaml  serving.yaml
configs/model/: backbone.yaml  fusion.yaml  heads.yaml
configs/train/: baseline.yaml  distillation.yaml  fusion_ablation.yaml
data/raw/: README.md
docs/: architecture.md  data_dictionary.md  deployment_guide.md  experiment_log.md  training_guide.md
infrastructure/: docker-compose.dev.yml  docker-compose.yml
infrastructure/docker/: Dockerfile.monitor  Dockerfile.serve  Dockerfile.train
notebooks/: 00_data_exploration.ipynb  01_baseline_training.ipynb  02_fusion_ablation.ipynb  03_explainability.ipynb  04_evaluation_results.ipynb  05_error_analysis.ipynb  06_kaggle_training.ipynb  KAGGLE_GUIDE.md  MULTIGUARD_EXPLAINED.md  multiguard_kaggle_p100_full_training.ipynb
reports/evaluation/: eval_val_best_model.json
scripts/: build_feature_store.py  evaluate.py  export_model.py  ingest_data.py  run_benchmark.py  train.py
src/: __init__.py
src/data/: __init__.py  augmentation.py  loaders.py  preprocessing.py  splitters.py  tokenizers.py  validators.py
src/evaluation/: __init__.py  comparison.py  evaluator.py  metrics.py
src/explainability/: __init__.py  gradcam.py  integrated_gradients.py  shap_explainer.py  visualizer.py
src/models/: __init__.py  losses.py  model_factory.py
src/monitoring/: __init__.py  alerting.py  drift_detector.py  feature_monitor.py  retraining_trigger.py
src/serving/: __init__.py  app.py  middleware.py  model_loader.py  schemas.py
src/training/: __init__.py  callbacks.py  distillation_trainer.py  metrics.py  optimizers.py  trainer.py
src/utils/: __init__.py  config.py  device.py  io.py  logging.py  registry.py  seed.py
tests/: conftest.py
(+30 files in other folders)
