[tool.poetry]
name = "multiguard"
version = "0.1.0"
description = "End-to-End Multimodal Content Intelligence Pipeline with Automated MLOps"
authors = ["Zubair Ashfaque <zubairashfaque@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = ">=2.1.0"
transformers = ">=4.36.0"
huggingface-hub = ">=0.20.0"
timm = ">=0.9.0"
open-clip-torch = ">=2.24.0"
peft = ">=0.7.0"
datasets = ">=2.16.0"
captum = ">=0.7.0"
shap = ">=0.44.0"
mlflow = ">=2.10.0"
feast = ">=0.35.0"
evidently = ">=0.4.0"
fastapi = ">=0.108.0"
uvicorn = ">=0.25.0"
gradio = ">=4.0.0"
pydantic = ">=2.5.0"
omegaconf = ">=2.3.0"
wandb = ">=0.16.0"
dvc = ">=3.30.0"
loguru = ">=0.7.0"
scikit-learn = ">=1.3.0"
faiss-cpu = ">=1.7.4"
redis = ">=5.0.0"
httpx = ">=0.25.0"
pillow = ">=10.0.0"
torchvision = ">=0.16.0"
albumentations = ">=1.3.0"
accelerate = ">=0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
pytest-asyncio = ">=0.23.0"
black = ">=23.12.0"
ruff = ">=0.1.9"
mypy = ">=1.8.0"
isort = ">=5.13.0"
pre-commit = ">=3.6.0"
jupyter = ">=1.0.0"
ipykernel = ">=6.27.0"
types-requests = "*"
types-pyyaml = "*"
types-pillow = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests that require GPU or large data",
    "integration: marks integration tests",
    "smoke: marks end-to-end smoke tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/scripts/*"]
